# newstaker

./: Makefile.in  aclocal.m4  configure  configure.in
src/: Makefile.am  Makefile.in  main.c  ui.c  ui.h
