#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([newstaker], [0.1], [dominik.burgdoerfer@googlemail.com])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

AC_CHECK_PROGS([GUILE_SNARF],[guile-snarf])
if test x"$GUILE_SNARF" = x; then
    AC_MSG_ERROR([*** Couldn't find guile-snarf ***])
fi

GUILE_PROGS

# Checks for libraries.
PKG_CHECK_MODULES([GUILE], [guile-2.0])
PKG_CHECK_MODULES([GTK], [gtk+-2.0])
PKG_CHECK_MODULES([WEBKIT], [webkit-1.0])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
